--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<input type="text" name="name" id="name" placeholder="Enter your name" autofocus required/><br/><br/>
 
 			<label for="telephone">Telephone:</label>
-			<input type="tel" name="tel" id="tel" placeholder="1-234-567-8910" required/><br/><br/>
+			<input type="tel" name="tel" id="telephone" placeholder="1-234-567-8910" required/><br/><br/>
 
 			<label for="e-mail">E-mail address:</label>
-			<input type="email" name="email" id="email" placeholder="Enter your email address" required/>
+			<input type="email" name="email" id="e-mail" placeholder="Enter your email address" required/>
 
 		</fieldset>
 		
@@ -38,7 +38,7 @@
     			<option value="Harry Potter i Insygnia Śmierci">
   			</datalist>
 				<label for="quantity">Quantity(Maximum 5):</label>
-				<input type="number" name="quantity" min="1" max="5">
+				<input type="number" name="quantity" id="quantity" min="1" max="5">
 		</fieldset><br/>
 		<input type="submit" value="Sumbit">
 	</form>
