--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<fieldset id="klient">
 			<legend>Customer Info</legend>
 
-			<lebel for="name">Name:</lebel>
+			<label for="name">Name:</label>
 			<input type="text" name="name" id="name" placeholder="Enter your name" autofocus required/><br/><br/>
 
 			<label for="telephone">Telephone:</label>
